created css media queries

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ nav {
   } 
 }
 
-@media all and (max-width: 1024px) {
+@media all and (min-width: 769px) and (max-width: 1023px) {
   body{
         background-color: red;  
       } 
