--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    color: #555;
 }
   
 *,
@@ -10,37 +11,106 @@ html {
   margin: 0;
   }
   
+a{
+  text-decoration: none;
+}
+
+ul, li {
+  list-style-type: none;
+}
+
 body {
   background-color: yellow;
   font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
   font-size: 14px;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 nav {
   background: #fff;
+  position: relative;
 }
 
-.logo {
+nav .logo {
   position: absolute;
+  background-position: 50%;
+  background-size: cover;
+  top: 0;
+  left: 0;
+}
+
+.logo a{
+  position: relative;
+  background-color: #f42;
+  background: linear-gradient(to bottom right,#c09,#f42 85%);
+  display: block;
+  height: 48px;
+  padding: 16px 20px;
+  width: 106px;
+  will-change: height;
+}
+
+.logo img {
+  display: block;
+  height: 16px;
+  position: relative;
+  width: 66px;
+  z-index: 999;
+  max-width: 100%;
 }
 
 .first-nav {
-
+  background-color: red;
 }
 
-.first-nav-right {
+div.ad {
+  font-size: 13px;
+  background: #fd3;
+  line-height: 60px;
+  text-align: center;
+  width: 100%;
+  clear: both;
+}
+
+.ad a {
+  display: inline-block;
+  color: black;
+}
+
+.first-nav > ul, .second-nav > ul, .special, .nav-mobile {
+  visibility: hidden;
+  display: none;
+}
+
+.icons {
   float: right;
-  padding-right: 20px;
+  width: 100px;
+  height: 48px;
+  outline: 1px dashed gray;
 }
 
+.icons li a{
+  display: block;
+  border-right: 1px solid red;
+  background: cornflowerblue;
+  height: 48px;
+  width: 48px;
+  padding: 16px;
+  list-style-type: none;
+}
 
+.icons span {
+   background-color: #ff4422;
+   width: 22px;
+   height: 2px;
+   display: inline-block;
+   margin: -1px 0 0;
+   padding: 0;
+   opacity: 1!important;
+   line-height: 0;
 
-
-
-
-
+}
 
 /*********************************************
  *********************************************
@@ -49,20 +119,57 @@ nav {
  ********************************************/
 
 
-@media all and (max-width: 768px) {
-  body{
+@media all and (max-width: 768px) {  /* exclusive to mobile  */
+  body {
     background-color: blue;  
   } 
+
 }
 
-@media all and (min-width: 769px) and (max-width: 1023px) {
-  body{
-        background-color: red;  
-      } 
+@media all and (min-width: 769px) and (max-width: 1023px) { /* exlusively medium size */
+  body {
+      background-color: red;  
+    } 
 }
 
-@media all and (min-width: 1024px) { 
-  body{
-        background-color: orange;  
-      } 
+
+@media all and (min-width: 768px) { /* when is bigger than mobile */
+  body {
+    background-color: green; /* erase this */    
+  } 
+    
+  .logo {
+    position: absolute;
+    visibility: hidden;
+  }
+  
+  .first-nav {
+    background-color: #131313;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 32px;
+    max-height: 32px;
+    position: relative;
+    z-index: 2;
+  }
+  .first-nav li{
+    display: inline-block;
+  }
+  .first-nav li:first-child {
+    margin-left: 20px;
+  }
+  .first-nav a{
+    color: #fff;
+  }
+  
+  .first-nav-right {
+    float: right;
+    padding-right: 20px;
+  }
+}
+
+@media all and (min-width: 1024px) {   /* exclusive to desktop big */
+  body {
+    background-color: orange;  
+  } 
 }
