--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,46 @@
+/***********************************************************/
+
+/**********     GENERAL STYLES AND RESETS      *************/
+
+/***********************************************************/
+
 html {
-    box-sizing: border-box;
-    color: #555;
+  box-sizing: border-box;
+  color: #555;
 }
-  
-*,
-*::before,
-*::after {
+
+*, *::before, *::after {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
-  }
-  
-a{
+}
+
+a {
   text-decoration: none;
+  /* color: inherit; */
 }
 
 ul, li {
   list-style-type: none;
 }
+
 img {
   max-width: 100%;
 }
+
 body {
   background-color: yellow;
-  font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
+  font-family: "ARS Maquette", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   width: 100%;
   /* min-height: 100vh; */
 }
+
+/****************************************/
+
+/**********     HEADER      *************/
+
+/****************************************/
 
 nav {
   background: #fff;
@@ -42,10 +55,10 @@ nav .logo {
   left: 0;
 }
 
-.logo a{
+.logo a {
   position: relative;
   background-color: #f42;
-  background: linear-gradient(to bottom right,#c09,#f42 85%);
+  background: linear-gradient(to bottom right, #c09, #f42 85%);
   display: block;
   height: 48px;
   padding: 16px 20px;
@@ -63,7 +76,45 @@ nav .logo {
 }
 
 .first-nav {
-  background-color: red;
+  background-color: #131313;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 32px;
+  max-height: 32px;
+  position: relative;
+  z-index: 2;
+}
+
+.second-nav {
+  font-family: Shentox, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  display: block;
+  height: 48px;
+  letter-spacing: .04em;
+  line-height: 1;
+  padding: 18px 10px 0;
+}
+
+.second-nav > ul {
+  float: left;
+}
+.first-nav ul li a{
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.first-nav ul li{
+  margin: 0 0 0 12px;
+}
+
+.first-nav .active,
+.first-nav ul li a:hover  {
+  color: rgba(255, 255, 255, 1)
+}
+
+.second-nav ul li a {
+  color: #aaa;
+  padding: 18px 12px 0;
 }
 
 div.ad {
@@ -80,11 +131,6 @@ div.ad {
   color: #555
 }
 
-.first-nav > ul, .second-nav > ul, .special, .nav-mobile {
-  visibility: hidden;
-  display: none;
-}
-
 .icons {
   float: right;
   width: 100px;
@@ -92,52 +138,70 @@ div.ad {
   outline: 1px dashed gray;
 }
 
-.icons li a{
+.icons li a {
   display: inline-block;
-  float: left;  
+  float: left;
   height: 48px;
   width: 48px;
   padding: 16px;
   list-style-type: none;
   position: relative;
+
 }
 
-.search-icon{
+.search-icon {
   border-right: 1px solid gray;
 }
 
 .icons span {
-   background-color: #ff4422;
-   width: 20px;
-   height: 2px;
-   display: inline-block;
-   margin: -1px 0 0;
-   padding: 0;
-   line-height: 0;
-   position: absolute;
-   top: 50%;
-   left: 14px;
-   vertical-align: baseline;
+  background-color: #ff4422;
+  width: 20px;
+  height: 2px;
+  display: inline-block;
+  margin: -1px 0 0;
+  padding: 0;
+  line-height: 0;
+  position: absolute;
+  top: 50%;
+  left: 14px;
+  vertical-align: baseline;
 }
 
-footer  {
+/**********************************************/
+
+/**********     MAIN CONTENT      *************/
+
+/**********************************************/
+
+
+
+
+
+/****************************************/
+
+/**********     FOOTER      *************/
+
+/****************************************/
+
+footer {
   background-color: #131313;
   text-align: center;
 }
 
-footer .wrapper{
+footer .wrapper {
   padding: 0 20px;
 }
 
 footer .links {
-  padding-top:42px;
+  padding-top: 42px;
   padding-bottom: 28px
 }
-footer .social ul{
+
+footer .social ul {
   display: flex;
   justify-content: space-around;
   width: fit-content;
-  margin:0 auto;
+  margin: 0 auto;
   margin-bottom: 21px;
 }
 
@@ -152,6 +216,7 @@ footer .circle {
 footer a {
   color: white;
 }
+
 footer .legal {
   background-color: #000;
   padding: 39px 0
@@ -161,12 +226,13 @@ footer .menu ul {
   display: flex;
   justify-content: center;
   width: fit-content;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 .menu li {
   margin: 0 8px;
 }
+
 footer img {
   height: 9px;
   display: inline-block;
@@ -174,64 +240,88 @@ footer img {
   margin-right: 1px;
   vertical-align: baseline;
 }
+
 /*********************************************
- *********************************************
- ********  Media Queries Breakpoints  ********
- *********************************************
+
+ *********  Media Query Breakpoints  *********
+
  ********************************************/
 
+   /* exclusive to mobile  */
 
-@media all and (max-width: 768px) {  /* exclusive to mobile  */
+@media all and (max-width: 768px) {
+
   body {
-    background-color: blue;  
-  } 
+    background-color: deepskyblue;
+  }
 
+  .first-nav>ul, .second-nav>ul, .special, .nav-mobile {
+    visibility: hidden;
+    display: none;
+  }
 }
 
-@media all and (min-width: 769px) and (max-width: 1023px) { /* exlusively medium size */
+  /* exlusively medium size i.e. tablet */
+
+@media all and (min-width: 769px) and (max-width: 1023px) {
+
   body {
-      background-color: red;  
-    } 
+    background-color: red;
+  }
+
+  .nav-mobile {
+    visibility: hidden;
+    display: none;
+  }
+
+  .first-nav ul li a{
+    font-weight: bold;
+  }
 }
 
+  /* when is bigger than mobile - tablet and desktop */
 
-@media all and (min-width: 768px) { /* when is bigger than mobile */
+@media all and (min-width: 768px) {
+
   body {
-    background-color: green; /* erase this */    
-  } 
-    
+    background-color: green;
+  }
+
+  .special, .nav-mobile {
+    visibility: hidden;
+    display: none;
+  }
   .logo {
     position: absolute;
     visibility: hidden;
   }
-  
-  .first-nav {
-    background-color: #131313;
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 32px;
-    max-height: 32px;
-    position: relative;
-    z-index: 2;
-  }
-  .first-nav li{
+
+  .first-nav li, .second-nav li {
     display: inline-block;
   }
-  .first-nav li:first-child {
+
+  .first-nav li:first-child, .second-nav li:first-child {
     margin-left: 20px;
   }
-  .first-nav a{
+
+  .first-nav a {
     color: #fff;
   }
-  
+
   .first-nav-right {
     float: right;
     padding-right: 20px;
   }
+  .second-nav {
+    /* padding: 18px 10px 0; */
+}
 }
 
-@media all and (min-width: 1024px) {   /* exclusive to desktop big */
+  /* exclusive to desktop big */
+
+@media all and (min-width: 1024px) {
+
   body {
-    background-color: orange;  
-  } 
+    background-color: orange;
+  }
 }
