--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav .logo {
 
 .second-nav ul li a {
   color: #aaa;
-  padding: 18px 12px 0;
+  /* padding: 18px 12px 0; */
 }
 
 div.ad {
@@ -133,8 +133,8 @@ div.ad {
 
 .icons {
   float: right;
-  width: 100px;
   height: 48px;
+  width: 96px;
   outline: 1px dashed gray;
 }
 
@@ -256,9 +256,9 @@ footer img {
   }
 
   .first-nav>ul, .second-nav>ul, .special, .nav-mobile {
-    visibility: hidden;
     display: none;
   }
+
 }
 
   /* exlusively medium size i.e. tablet */
@@ -287,7 +287,7 @@ footer img {
     background-color: green;
   }
 
-  .special, .nav-mobile {
+  .nav-mobile {
     visibility: hidden;
     display: none;
   }
@@ -314,7 +314,24 @@ footer img {
   }
   .second-nav {
     /* padding: 18px 10px 0; */
-}
+  }
+
+  .icons ul li:first-child {
+    width: 48px;
+    margin-left: 0;
+  }
+
+  .hamburguer span{
+    display: none;
+  }
+
+  .icons {
+    width: 48px;
+  }
+
+  .special {
+    display: none;
+  }
 }
 
   /* exclusive to desktop big */
@@ -323,5 +340,13 @@ footer img {
 
   body {
     background-color: orange;
+  }
+  .special {
+    display: grid;
+    grid-template-columns: 85px 100px 20px 30px 100px;
+    grid-template-columns: repeat(5, auto);
+    outline: 1px red solid;
+    justify-items: end;
+    
   }
 }
