--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: ARS Maquette;
+    font-family: "ARS Maquette";
     font-style: normal;
     font-weight: 400;
     src: url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.eot);
@@ -7,7 +7,7 @@
   }
   
   @font-face {
-    font-family: ARS Maquette;
+    font-family: "ARS Maquette";
     font-style: italic;
     font-weight: 400;
     src: url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular-italic.eot);
