--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ a {
   text-decoration: none;
   /* color: inherit; */
 }
+h4, h5 {
+  font-size: 14px;
+}
 
 ul, li {
   list-style-type: none;
@@ -38,6 +41,7 @@ body {
   background-color: yellow;
   font-family: "ARS Maquette", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
+  font-weight: 300;
   width: 100%;
   /* min-height: 100vh; */
 }
@@ -69,7 +73,6 @@ nav .logo {
   height: 48px;
   padding: 16px 20px;
   width: 106px;
-  will-change: height;
 }
 
 .logo img {
@@ -92,9 +95,6 @@ nav .logo {
 }
 
 .second-nav {
-  font-family: Shentox, sans-serif;
-  font-weight: 500;
-  text-transform: uppercase;
   display: block;
   height: 48px;
   letter-spacing: .04em;
@@ -120,6 +120,8 @@ nav .logo {
 
 .second-nav ul li a {
   color: #aaa;
+  font-family: Shentox, sans-serif;
+  font-weight: 500;
 }
 
 .ad {
@@ -205,6 +207,9 @@ letter-spacing: -2px;
   height: 28px;
 }
 
+.hamburguer a:hover {
+  
+}
 
 /**********************************************/
 
@@ -298,7 +303,92 @@ footer img {
   .special, .nav-mobile {
     display: none;
   }
+  
+  .nav-mobile {
+    /* transition: .4s;
+    transform: translateX(100%); */
+    background: linear-gradient(to bottom right,#c09,#f42 85%);
+    height: 100vh;
+    left: 0;
+    padding: 48px 20px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 997;
+  }
+  .nav-mobile .wrapper {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    border-top: 1px solid hsla(0,0%,100%,.15);
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    position: absolute;
+    right: 0;
+    top: 48px;
+  }
 
+  .nav-mobile ul.follow {
+    display: flex;
+    justify-content: space-around;
+    width: fit-content;
+    margin-bottom: 21px;
+    justify-content: start;
+    border-bottom: 1px solid hsla(0,0%,100%,.15);
+    margin: 0 -20px 2em;
+    padding: 0 20px 20px;
+  }
+  
+  .nav-mobile ul.follow li a{
+    width: 58px;
+    margin: 0 21px;
+  }
+  
+  .square {
+    width: 16px;
+    height: 16px;
+    border-radius: 5%;
+    background-color: #fff;
+    margin: 0 21px;  
+  }
+  
+  .two-cols {
+    /* display: flex;
+    flex: 0 1 auto;
+    flex-flow: row wrap; */
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    margin: -8px;
+  }
+
+  .two-cols div {
+    /* flex-basis: 50%;
+    max-width: 50%;
+    flex: 0 0 auto; */
+    padding: 8px;
+    position: relative;
+  }
+
+  .two-cols ul {
+    margin-bottom: 2em;
+  }
+
+  .two-cols h5 {
+    color: #fff;
+    font-family: Shentox,sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: .04em;
+    line-height: 1.5;
+  }
+
+  .two-cols li {
+    margin-top: .5em;
+  }
+
+  .two-cols li a {
+    color: hsla(0,0%,100%,.6);
+  }
 }
 
   /* exlusively medium size i.e. tablet */
