--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,168 @@
   box-sizing: border-box;
 }
 
+.mobile {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+}
+
+nav {
+   display: grid;
+   width: 100%;
+}
+
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
+  background: black;
+  align-items: center;
+}
+
+nav ul li {
+  list-style-type: none;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+.socials-nav ul, .business-nav ul {
+  display: flex;
+  padding: 10px;
+}
+
+.socials-nav ul a, .business-nav ul a {
+  padding: 10px;
+  color:#959595;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+.bottom-nav {
+  display:flex;
+  height: 45px;
+  background: #fafafa;
+  width:100% ;
+  font-size:12px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-nav ul {
+  display: flex;
+  padding: 13px 0 13px 13px;
+}
+
+.left-nav ul a{
+  padding:5px;
+}
+
+.right-nav {
+  align-items: center;
+  font-size: 1.1em;
+  margin-right:5px;
+  padding: 5px;
+  border: 1px solid lightgray;
+  border-top:0;  
+  border-bottom:0;
+  border-right: none;
+}
+
+.right-nav  a{
+  padding:15px;
+  text-decoration: none;
+}
+
+.right-nav button{
+  width: 60px;
+  padding: 2px;
+  background: #00cccc;
+  border-radius:5px;
+  border-style: none;
+  height: 23px;
+  align-items: center;
+  color: white;
+  font-size: 12px;
+}
+
+.num{
+  font-size: 30px;
+  color: red;
+}
+
+.year{
+  font-size: 18px;
+}
+
+ .right-nav a, .left-nav  a {
+  color:#959595;
+} 
+.navs ul a:hover {
+  color: black;
+}
+
+.tops ul a:hover {
+  color: white;
+}
+.right-nav img{
+   width:50px; 
+   height: auto;
+}
+.ads {
+  display: grid;
+  background: #ffdd33;
+  height: 25px;
+  align-items: center;
+  grid-template-rows: 1fr; 
+}
+
+.ads p {
+  margin-left: 24px;
+}
+ 
+.bottom-bar .uil-search{
+  display: none;
+}
+
+.container{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns:  repeat(3,1fr);
+  grid-auto-rows: 200px
+}
+
+.black{
+  background: black;
+  grid-area: 1/1/3/3;
+  color: white;
+}
+.blue{
+  background: blue;
+}
+.yellow{
+  background: yellow;
+}
+.black img {
+  width: 300px ;
+}
+
+
+.section1{
+  margin: 0 auto;
+  width:80%;
+  margin-top:50px;
+}
+.wrapper {
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap:10px;
+}
+.green{
+  height: 250px;
+  background: green;
+}
