--- a/css/style.css
+++ b/css/style.css
@@ -31,78 +31,73 @@
   }
   .bars .uil {
     font-size: 20px;
-    color:lightgray;
-    width:80px;
+    color: lightgray;
+    width: 80px;
     text-align: center;
-    padding-top:6px;
+    padding-top: 6px;
   }
-  .bars .uil{
-    border:1px solid lightgrey;
-    border-top:0;
-    border-bottom:0;
-    border-right:0; 
+  .bars .uil {
+    border: 1px solid lightgrey;
+    border-top: 0;
+    border-bottom: 0;
+    border-right: 0;
   }
-
-  .container{
+  .container {
     display: flex;
-   flex-direction:column; 
+    flex-direction: column;
   }
-.blue, .yellow {
-  margin-top:10px; 
-}
-
-  .section1{
-    width:100%;
-    margin-top:50px;
+  .blue, .yellow {
+    margin-top: 10px;
   }
-  .wrapper {
-    display:flex;
-   flex-direction: column;
-
+  .section1,
+  .section2,
+  .articles {
+    width: 100%;
+    margin-top: 50px;
   }
-  .green{
+  section .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .green {
     height: 150px;
     background: green;
-    margin-top:10px;
+    margin-top: 10px;
   }
-  
 }
 
 @media screen and (min-width: 720px) and (max-width: 1115px) {
   .hidden, .hidde, .bars {
     display: none;
   }
-
   .right-nav {
     display: none;
   }
-
-.mobile {
-  display:block;
-}
-
-.logo img {
-  width: 100px;
-  height: 75px;
-}
-.left-nav  {
-  display: flex;
-  padding: 13px 0 13px 13px;
-  margin-left: 20px;
-}
-.socials-nav  {
-  margin-left: 40px;
-}
-.right-nav{
-  display: block;
-  border: 1px solid lightgrey;
-  padding:15px;
-  margin-right:15px;
-  border-top: 0; 
-  border-right: 0; 
-  border-bottom:0;
-}
-.p, .o, .l, .q, .r{
-  display: none
-}
+  .mobile {
+    display: block;
+  }
+  .logo img {
+    width: 100px;
+    height: 75px;
+  }
+  .left-nav {
+    display: flex;
+    padding: 13px 0 13px 13px;
+    margin-left: 20px;
+  }
+  .socials-nav {
+    margin-left: 40px;
+  }
+  .right-nav {
+    display: block;
+    border: 1px solid lightgrey;
+    padding: 15px;
+    margin-right: 15px;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 0;
+  }
+  .p, .o, .l, .q, .r {
+    display: none
+  }
 }
