--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 
 a {
   text-decoration: none;
-  /* color: inherit; */
 }
 
 h4, h5 {
@@ -102,7 +101,6 @@ nav ul li a {
 }
 
 .right-nav a {
-  /* padding:10px; */
   text-decoration: none;
 }
 
@@ -167,7 +165,7 @@ nav ul li a {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 200px
+  grid-auto-rows: 250px
 }
 
 .black {
@@ -188,7 +186,7 @@ nav ul li a {
   width: 300px;
 }
 
-.section1, .section2, .articles {
+.section1, .section2, .section4, .articles {
   margin: 0 auto;
   width: 80%;
   margin-top: 50px;
@@ -212,7 +210,7 @@ section .wrapper {
   grid-gap: 20px;
 }
 
-.black {
+.black2 {
   height: 270px;
 }
 .articles h2::after {
@@ -266,7 +264,24 @@ section .wrapper {
   grid-gap: 20px;
 }
 
-.blue {
+.lightblue {
   background: blue;
   height: 150px;
 }
+
+.all-deals{
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper4{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+
+.brown{
+  background: brown;
+  height:200px;
+}
+
