--- a/css/styles.css
+++ b/css/styles.css
@@ -174,16 +174,25 @@ nav ul li a {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 250px
+  grid-auto-rows: 250px;
 }
 
+.black img{
+ 
+  height: 100%;
+  object-fit: cover;
+  position:absolute;
+  left:150px;
+  z-index:-1;
+}
 .black {
-  background: black;
   grid-area: 1/1/3/3;
   color: white;
+  position:relative;
 }
 
 .blue {
+  background-image: url("./images/articles-4.jpg");
   background: blue;
 }
 
