--- a/css/styles.css
+++ b/css/styles.css
@@ -239,32 +239,73 @@ height: 50%;
   margin: 0 auto;
   width: 85%;
   margin-top: 50px;
+  width: 1176px;
 }
 
 .wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 10px;
+  grid-gap: 20px;
 }
 
-.green {
-  height: 250px;
-  background: green;
+.section1 .wrapper div *{
+  color: black;
 }
+
+.section1 .wrapper div{
+  height: 227px;
+}
+.section1 .wrapper * a div{
+  height: 135px;
+}
+.section1 .wrapper .green1 a div{
+  background: url(../images/section1-1.jfif) no-repeat;
+}
+.section1 .wrapper .green2 a div {
+  background: url(../images/section1-2.jfif) no-repeat;
+}
+
+.section1 .wrapper .green3 a div {
+  background: url(../images/section1-3.png) no-repeat;
+}
+
+.section1 .wrapper .green4 a div {
+  background: url(../images/section1-4.jfif) no-repeat;
+}
+
+.section1 .wrapper .green5 a div {
+  background: url(../images/section1-5.png) no-repeat;
+}
+
+.section1 .wrapper .green6 a div {
+  background: url(../images/section1-6.jfif) no-repeat;
+}
+
+.section1 .wrapper .green7 a div {
+  background: url(../images/section1-7.jfif) no-repeat;
+}
+
+.section1 .wrapper .green8 a div {
+  background: url(../images/section1-8.png) no-repeat;
+}
+
+
+
+
+
 
 .articles {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 36px;
-  width: 1176px;
 }
 
 .gray {
-  /* height: 368px; */
   background-color: dimgray;
   display: grid;
   align-content: end;
+  height: 276px;
 }
 
 .gray * {
@@ -294,7 +335,7 @@ h5 {
 
 .articles section:first-child>.gray {
   background: url(../images/articles-1.png) no-repeat transparent;
-  height: 276px;
+
 }
 
 .articles section:nth-child(2)>.gray {
@@ -348,7 +389,6 @@ h5 {
 .articles section>div div:first-child {
   padding-top: 20px;
 }
-
 
 .mini-image {
   background-color: #ffdd33;
